# ecom

./: README.md  main.py  pyproject.toml
app/: user.py
user_site/: __init__.py  services.py.bak
user_site/_core/: config.py  deps.py
user_site/api/: __init__.py
user_site/api/v1/: http_exceptions.py  user_routes.py  user_schemas.py
user_site/application/: __init__.py  services.py
user_site/domain/: __init__.py  entities.py  repo_ports.py  value_objects.py
user_site/infrastructure/: db.py  logging.py  models.py  repo_adapters.py
user_site/utils/: helpers.py
