[project]
name = "ecom"
version = "0.1.0"
description = "This is an eCommerce project, from prototype to production-level standards"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

members = ["user_site", "."]

[tool.pyright]
# 1. Virtual Environment Mapping
# This tells Neovim exactly where to find 'pytest' and other dev tools
venvPath = "."
venv = ".venv"
